<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/colorPrimaryDark">
    <ProgressBar
        android:id="@+id/loginprogress"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="invisible"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <LinearLayout
        android:padding="20dp"
        android:layout_margin="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
android:layout_gravity="center_horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="20sp"
    android:text="@string/logohead1"
    android:textColor="@color/white"
    android:textStyle="bold"/>
    <TextView
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/logohead2"
        android:textColor="@color/white"
        android:textStyle="bold"/>
    </LinearLayout>
        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                android:inputType="textEmailAddress"
                android:id="@+id/loginemail"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:hint="@string/username"
                android:backgroundTint="@color/white"
                android:textStyle="normal"
                android:padding="16dp"
                android:singleLine="true"
                android:textColorHint="@color/halfwhite"
                android:textSize="18sp"/>
            <EditText
                android:padding="16dp"
                android:id="@+id/loginpassword"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:textColor="@color/white"
                android:hint="@string/password"
                android:textStyle="normal"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColorHint="@color/halfwhite"
                android:textSize="18sp"/>

            <Button
                android:textColor="@color/white"
                android:id="@+id/loginbutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textAllCaps="false"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:background="#FA1403"
                android:text="@string/buttonlogin"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/login_reg_button"
        android:layout_marginBottom="20dp"
        android:background="@color/white"
        android:textAllCaps="false"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:textColor="#FA1403"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/newregisterbutton"
        android:textSize="18sp"
        android:textStyle="bold"/>

</RelativeLayout>